# base-x-rs

./: .travis.yml  Cargo.toml  LICENCE.md  README.md
benches/: base.rs
src/: alphabet.rs  bigint.rs  decoder.rs  encoder.rs  lib.rs
